 --- means no change in the manuals is called for.
When you add a new item, please add it without either +++ or ---
so we will look at it and add it to the manual.


* Changes in Emacs 23.2


* Changes in Specialized Modes and Packages in Emacs 23.2

+++
** New connection methods in Tramp.
On systems which support GVFS-Fuse, Tramp offers the new connection
methods "dav", "davs" and "obex".


* Installation Changes in Emacs 23.1

** The default X toolkit is now Gtk+, rather than Lucid.
The configure option `--with-gtk' has been removed.  Gtk is now the
default toolkit, but you can use --with-x-toolkit=gtk if necessary.

** New font code.
Fonts are handled by new code capable of dealing with multiple font
backends.  This uses the freetype and fontconfig libraries.

*** Emacs now accepts font names supplied in the fontconfig format
(e.g. "monospace-12:bold") and GTK format (e.g. "Monospace Bold 12").

*** Added support for local fonts (fonts installed on the machine
where Emacs is running).

*** Added support for the Xft library for antialiasing.

*** Added support for the otf library for complex text layout by
OpenType fonts.

*** Added support for the m17n library for text shaping.

** Changes to image support

*** configure now checks for libgif before libungif when searching for
a GIF library.

*** Emacs now supports the SVG image format through librsvg2.

*** Emacs now supports multi-page TIFF images.

** New NeXTSTEP-based port
This provides support for GNUstep (via the GNUstep libraries) and Mac
OS X (via the Cocoa libraries).

Specify --with-ns to configure for this.  By default, a self-contained
app will be built (containing all lisp).  To install/share lisp with
other emacsen (e.g. X11 build) use --disable-ns-self-contained.  See
nextstep/README and nextstep/INSTALL in the Emacs source directory.

** Mac OS X is no longer supported via Carbon.
Use the NeXTSTEP port, described above.

** The new configuration option "--with-dbus" enables D-Bus language